Adicionei um paragrafo

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Meu primeiro repositório</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis, id veritatis? At, inventore sit ipsam cupiditate ipsa accusantium, repudiandae consectetur exercitationem recusandae voluptas ea vel modi provident excepturi, fugit praesentium!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, inventore facere! Dolor voluptatibus molestiae incidunt! Tempora aspernatur nisi quidem, minus, accusamus molestias, debitis eveniet voluptas laudantium quaerat sit aperiam illo.</p>
 </body>
 </html>
